--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -56,6 +56,9 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+    <!-- Custom js files -->
+    <script type="text/javascript" src="{% static 'assets/js/utils.js' %}"></script>
 <script>
 function onReady(callback) {
   var intervalId = window.setInterval(function() {
