--- a/soccerbase/templates/soccerbase/table.html
+++ b/soccerbase/templates/soccerbase/table.html
@@ -81,7 +81,7 @@
         {% include 'soccerbase/tables/filters_modal_teams.html' %}
     {% endif %}
     {% include 'platform/filters/filters_scripts.html' %}
-    {% comment %} <script src="{% static 'assets/js/filters.js' %}"></script> {% endcomment %}
+{#    <script src="{% static 'assets/js/filters.js' %}"></script>#}
     
 
 {% if user.is_authenticated %}
