--- a/profiles/templates/profiles/show_club_profile.html
+++ b/profiles/templates/profiles/show_club_profile.html
@@ -9,16 +9,14 @@
 {% endblock %}
 
 
-
 {% block content %}
 <section id="profile" class="profile" style="padding-top:10px;">
   <div class="containerprofile-container" data-aos="fade-up">
       <div class="row">
         <div class="col-sm-6">{% include 'profiles/cards/_coach_account_card.html' %}</div>
         <div class="col-sm-6">{% include 'profiles/cards/_coach_clubs_card.html' %}</div>
-      </div>  <!-- end row -->
-    </div> <!-- end container -->
+      </div>
+    </div>
   </div>
 </section>
 {% endblock content%}
-
