Fixed announcement feature - error with approving announcements to clubs/players/coaches from same clubs. Fixed add ClubForPlayer announcement - changed league field to readonly

--- a/backend/templates/partials/action_messages.html
+++ b/backend/templates/partials/action_messages.html
@@ -4,7 +4,7 @@
 
 
 
-<div aria-live="polite" aria-atomic="true" style="z-index:1500; position: absolute; top:15px; width: 100%" >
+<div aria-live="polite" aria-atomic="true" style="z-index:1500; position: sticky; top:15px; width: 100%" >
   <!-- Position it -->
   <div id="micro-messages">
 
