Fixed error with filtering by highest parent leagues

--- a/marketplace/templates/marketplace/announcement_club_for_coach.html
+++ b/marketplace/templates/marketplace/announcement_club_for_coach.html
@@ -24,7 +24,7 @@
                     Licencja
                 </div>
                 <div class="col-6 col-md-3 text-center">
-                    <h5>{{ object.league }}</h5>
+                    <h5>{{ object.league.display_league_top_parent }}</h5>
                     Aktualny poziom
                 </div>
                 <div class="col-6 col-md-3 text-center">
