--- a/marketplace/templates/marketplace/announcement_coach_for_club.html
+++ b/marketplace/templates/marketplace/announcement_coach_for_club.html
@@ -19,7 +19,7 @@
                         Licencja
                 </div>
                 <div class="col-6 col-md-3 text-center">
-                    <h5>{{ object.creator.coachprofile.display_league_top_parent|default:'-' }}</h5>
+                    <h5>{{ object.league.display_league_top_parent|default:'-' }}</h5>
                     Aktualny poziom
                 </div>
                 <div class="col-6 col-md-3 text-center">
