--- a/clubs/templates/clubs/teams/card.html
+++ b/clubs/templates/clubs/teams/card.html
@@ -19,26 +19,31 @@
       <h6 class="card-subtitle mb-2 text-muted"></h6>  
   
       <div class="card-text">
-       {% if see_team %}
-          {% include template with key=_('Nazwa')     value=object.display_team %}
-       {% endif %}
-          {% if see_club %}
-             {% include template with key=_('Klub')   value=object.display_club  link=object.club.get_permalink %}
-          {% endif %}
-
-        {% include template with key=_('Rozgrywki')   value=object.display_league_top_parent|default:'-'           link=object.get_league_permalink     %}
-        {% if object.display_name_junior %}
-            {% include template with key=_('Poziom')  value=object.display_name_junior|default:'-'        %} 
+        {% if see_team %}
+           {% include template with key=_('Nazwa')     value=object.display_team %}
         {% endif %}
-
-        {% include template with key=_('Grupa') value=object.display_league_region_and_group_name|default:'-'                          %}
 
         {% if see_club %}
-        {% include template with key=_('Województwo')        value=object.display_voivodeship|default:'-'      %}
+             {% include template with key=_('Klub')   value=object.display_club  link=object.club.get_permalink %}
         {% endif %}
+
+        {% include template with key=_('Rozgrywki')   value=object.display_league_top_parent|default:'-' ink=object.get_league_permalink %}
+
+        {% if object.display_name_junior or object.display_league_group_name %}
+            {% include template with key=_('Poziom')  value=object.display_name_junior|default:'-'        %}
+        {% endif %}
+
+        {% if object.display_league_region_and_group_name %}
+            {% include template with key=_('Grupa') value=object.display_league_region_and_group_name|default:'-' %}
+        {% endif %}
+
+        {% if see_club %}
+            {% include template with key=_('Województwo')        value=object.display_voivodeship|default:'-'      %}
+        {% endif %}
+
         {% include template with key=_('Mężczyzni/Kobiety')  value=object.display_gender|default:'-'      %}
         {% include template with key=_('Senior/Junior')      value=object.display_seniority|default:'-'      %}
-        
+
         {% if see_club %}
           {% get_club_link object.club text='Zobacz Klub' checks=False %}
         {% endif %}
