Added position filter in fantasy module

--- a/fantasy/templates/fantasy/filters_desktop.html
+++ b/fantasy/templates/fantasy/filters_desktop.html
@@ -25,6 +25,10 @@
                 {% include 'fantasy/filters/filter_leagues.html' with size=120 %}
             </div>
 
+            <div class="filter pr-2">
+                {% include 'fantasy/filters/filter_position.html' with size=120 %}
+            </div>
+
             <div class="filter pr-2"> 
                 {% include 'soccerbase/tables/filters/filter_vivo_ms.html'  with size=120 vivos=vivos %}
             </div>
