some of compression fixes

--- a/home/templates/home/partials/testymonials.html
+++ b/home/templates/home/partials/testymonials.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- ======= Testimonials Section ======= -->
 <section hidden id="testimonials" class="testimonials">
     <div class="container" data-aos="fade-up">
@@ -5,9 +6,7 @@
         <h1><span style="color:grey"></span> </span></h1> <h2>Opinie</h2>
         <p></p>
     </div>
-
     <div class="owl-carousel testimonials-carousel">
-
         <div class="testimonial-wrap">
         <div class="testimonial-item">
             <img src="{% static 'assets/img/testimonials/testimonials-1.jpg' %}" class="testimonial-img" alt="">
@@ -72,8 +71,6 @@
             </p>
         </div>
         </div>
-
     </div>
-
     </div>
 </section><!-- End Testimonials Section -->
