--- a/backend/templates/404.html
+++ b/backend/templates/404.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 
 
-{% block content %
+{% block content %}
     <h1>W tym momencie odświeżamy strone.</h1>
 
     <h2>Nie ma takiej strony. </h2>
