--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -45,6 +45,7 @@
   <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
   <link href="{% static 'assets/css/loading.css' %}" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   {% endcompress %}
 
   {% block extra_css %}
@@ -154,6 +155,7 @@ onReady(function() {
   <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
   <!-- App specific JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   {% endcompress %}
 
   <script>
