--- a/landingpage/templates/landingpage/first_section.html
+++ b/landingpage/templates/landingpage/first_section.html
@@ -18,67 +18,77 @@
     <section class="landingpage__main_photo dark__background d-flex align-items-center">
         <div class="container h-100">
           <div class="row">
-            <div class="col-xl-6 p-4">
+            <div class="landingpage__section col-xl-6 p-4 d-flex flex-column flex-lg-row-reverse justify-content-center w-100">
                 <img src="{% static 'assets/img/landingpage/pilka_out.png' %}"
                      class="w-100"
                      alt="Player standing infront of stadium"
                 >
-                <div class="my-5">
-                    <h1 class="mb-3">Weź udział w teście piłkarskim </h1>
-                    <p>Planujesz zmianę klubu w letnim oknie transferowym 2022?
-                        Znajdziemy klub, w którym będziesz mógł się sprawdzić.</p>
-                </div>
-                <div class="d-flex flex-column promo__section">
-                    <div class="d-flex promo_div mb-4">
-                        <div class="pr-2">
-                            <img class="w-50" src="{% static 'assets/img/landingpage/trusted.png' %}" alt="trusted icon">
+                <div class="">
+
+                    <div class="my-5">
+                        <h1 class="mb-3">Weź udział w teście piłkarskim </h1>
+                        <p>Planujesz zmianę klubu w letnim oknie transferowym 2022?
+                            Znajdziemy klub, w którym będziesz mógł się sprawdzić.</p>
+                    </div>
+                    <div class="d-flex flex-column promo__section">
+                        <div class="d-flex promo_div mb-4">
+                            <div class="pr-2">
+                                <img class="w-50" src="{% static 'assets/img/landingpage/trusted.png' %}" alt="trusted icon">
+                            </div>
+                            <div class="">
+                                <p>100% Gwarancja propozycji udziału w teście piłkarskim. Inaczej zwrot pieniędzy.</p>
+                            </div>
                         </div>
-                        <div class="">
-                            <p>100% Gwarancja propozycji udziału w teście piłkarskim. Inaczej zwrot pieniędzy.</p>
+                        <div class="d-flex promo_div mb-4">
+                            <div class="pr-2">
+                                <img class="w-50" src="{% static 'assets/img/landingpage/whistle.png' %}" alt="whistle icon">
+                            </div>
+                            <div class="">
+                                <p>Indywidualny opiekun, który zaproponuje Ci kluby zgodne z Twoimi umiejętnościami.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex promo_div mb-4">
+                            <div class=" pr-2">
+                                <img class="w-50" src="{% static 'assets/img/landingpage/organiser.png' %}" alt="organiser icon">
+                            </div>
+                            <div class="">
+                                <p>Tylko 100 miejsc. Nie zwlekaj!</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="d-flex promo_div mb-4">
-                        <div class="pr-2">
-                            <img class="w-50" src="{% static 'assets/img/landingpage/whistle.png' %}" alt="whistle icon">
-                        </div>
-                        <div class="">
-                            <p>Indywidualny opiekun, który zaproponuje Ci kluby zgodne z Twoimi umiejętnościami.</p>
-                        </div>
+
+                    <div class="d-flex justify-content-center mt-2 flex-column observe-div">
+                        {% if user.is_authenticated %}
+                            <a href="#" class="text-center reach_us_btn">Zgłoś się</a>
+                        {% else %}
+                           <a href="#" class="text-center reach_us_btn">Zaloguj się i zgłoś</a>
+                        {% endif %}
+                        <span class="text-center my-4 prices__text">
+                            Ceny już od 149 zł • Szybkie zgłoszenie i szybka odpowiedź (max 48h)
+                        </span>
                     </div>
-                    <div class="d-flex promo_div mb-4">
-                        <div class=" pr-2">
-                            <img class="w-50" src="{% static 'assets/img/landingpage/organiser.png' %}" alt="organiser icon">
-                        </div>
-                        <div class="">
-                            <p>Tylko 100 miejsc. Nie zwlekaj!</p>
-                        </div>
-                    </div>
+
                 </div>
 
-                <div class="d-flex justify-content-center mt-2 flex-column">
-                    <a href="#" class="reach_us_btn">Zgłoś się</a>
-                    <span class="text-center my-4 prices__text">
-                        Ceny już od 149 zł • Szybkie zgłoszenie i szybka odpowiedź (max 48h)
-                    </span>
-                </div>
             </div>
           </div>
         </div>
     </section>
     <!-- End Hero -->
 
-    <div class="text-center" style="position:relative; top:-15px;  z-index:666;height:26px; background-color:#fff;transform: skewY(-2.1deg);"></div>
+{#    <div class="text-center" style="position:relative; top:-15px;  z-index:666;height:26px; background-color:#fff;transform: skewY(-2.1deg);"></div>#}
 
     <section class="p-0 position-sticky sticky__menu white__background">
+        <div class="container">
 
-        <div class="second__navbar_fixed d-flex justify-content-between align-items-start mx-3">
-            <p class="active__border">Historie</p>
-            <a href="#how_it_works"><p>jak to działa?</p></a>
-            <p>Cenik</p>
-            <p>Formularz</p>
-            <p>FAQ</p>
+            <div class="second__navbar_fixed d-flex justify-content-between align-items-start mx-3">
+                <a href="history__section"><p class="active__border">Historie</p></a>
+                <a href="#how_it_works"><p>jak to działa?</p></a>
+                <a href="#price__section"><p>Cenik</p></a>
+                <a href="#test__section"><p>Formularz</p></a>
+                <a href="#faq__section"><p>FAQ</p></a>
+            </div>
         </div>
-
     </section>
 
     {% include 'landingpage/rest_sections.html' %}
