--- a/landingpage/templates/landingpage/history_carousel.html
+++ b/landingpage/templates/landingpage/history_carousel.html
@@ -5,13 +5,6 @@
 <!-- Slideshow container dekstop -->
 <div class="slideshow_container_desktop">
 
-    <ol class="carousel-indicators">
-        <li class="carouselDesktopIndicators active" data-slide-to="1"></li>
-        <li class="carouselDesktopIndicators" data-slide-to="2"></li>
-        <li class="carouselDesktopIndicators" data-slide-to="3"></li>
-        <li class="carouselDesktopIndicators" data-slide-to="4"></li>
-    </ol>
-
     <div class="d-flex position-relative slideshow_container_main_desktop">
 
 
@@ -100,15 +93,26 @@
             </div>
         </div>
     </div>
-    <!-- Next and previous buttons -->
-    <a class="carousel-control-prev" role="button" data-slide="prev">
-        <img class="arrow-right"  src="{% static 'assets/img/landingpage/left-arrow.png' %}" alt="">
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" role="button" data-slide="next">
-        <img class="arrow-right"  src="{% static 'assets/img/landingpage/right-arrow.png' %}" alt="">
-        <span class="sr-only">Next</span>
-    </a>
+    <div class="d-xxl-none d-flex justify-content-between carousel__control_div">
+        <!-- Next and previous buttons -->
+        <a class="carousel-control-prev" role="button" data-slide="prev">
+            <img class="arrow-right"  src="{% static 'assets/img/landingpage/left-arrow.png' %}" alt="">
+            <span class="sr-only">Previous</span>
+        </a>
+
+{#         <ol class="carousel-indicators">#}
+{#            <li class="carouselDesktopIndicators active" data-slide-to="1"></li>#}
+{#            <li class="carouselDesktopIndicators" data-slide-to="2"></li>#}
+{#            <li class="carouselDesktopIndicators" data-slide-to="3"></li>#}
+{#            <li class="carouselDesktopIndicators" data-slide-to="4"></li>#}
+{#        </ol>#}
+
+        <a class="carousel-control-next" role="button" data-slide="next">
+            <img class="arrow-right"  src="{% static 'assets/img/landingpage/button_next.png' %}" alt="">
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
 
 
 </div>
